<resources>
    <string name="app_name">Todoc</string>
    <string name="title_second_line">Crée le:</string>
    <string name="delete_icon_cd">delete icon</string>
    <string name="add_task_tv">Ajouter une tâche</string>
    <string name="main_menu">Main menu</string>
    <string name="par_dates">Par dates</string>
    <string name="par_projet">Par projet</string>
    <string name="by_all">Toutes</string>
    <string name="project_list">Liste des projets</string>
    <string name="dates_choices">Choix des dates</string>
    <string name="no_task_text">Tu n’as aucune tâche à traiter</string>
    <string name="cancel">annuler</string>
    <string name="ok">Ok</string>
    <string name="add">Ajouter</string>

    <string-array name="project_array">
        <item>Projet Circus</item>
        <item>Projet Lucidia</item>
        <item>Projet Tartampion</item>
    </string-array>
</resources>
