<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dates_choices"
        style="@style/add_task_tv_style"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogStartDateLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogStartDateEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:drawableLeft="@drawable/ic_date_range_black_24dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogEndDateLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogEndDateEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:drawableLeft="@drawable/ic_date_range_black_24dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/cancelDateDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:id="@+id/okDateDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </LinearLayout>


</LinearLayout>