<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/addRelativeLyt"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/addMainLinearLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageColor"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/addTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_tv"
            style="@style/add_task_tv_style"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addTaskInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addTaskEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateOfCreationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/DateEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:visibility="gone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/projectSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addButtonLinearLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/addMainLinearLyt"
        android:gravity="right">

        <Button
            android:id="@+id/cancelAddDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:id="@+id/addDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/colorPrimary"
            android:paddingRight="0dp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>